--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>Scott Kutler's Portfolio</title>
   </head>
   <body>
-    <noscript>Please enable JavaScript to run this app.</noscript>
+    <noscript
+      >Please enable JavaScript to run this app. Alternatively,
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
