updated non-js public code and added OG image. removed ppt

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta content="%PUBLIC_URL%/fb-og.png" property="og:image" />
     <meta
       name="Scott Kutler's Portfolio"
       content="Scott Kutler's React-Based Portfolio"
@@ -32,7 +33,14 @@
   </head>
   <body>
     <noscript
-      >Please enable JavaScript to run this app. Alternatively,
+      ><h1>
+        Please enable JavaScript to run this app. Alternatively, you may
+        download my resume
+        <a
+          href="https://github.com/skut21x-ga/portfolio/raw/master/src/assets/ScottKutler-SoftwareEngineerResume.pdf"
+          >HERE
+        </a>
+      </h1>
     </noscript>
     <div id="root"></div>
     <!--
