updated fb og url

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta content="%PUBLIC_URL%/fb-og.png" property="og:image" />
+    <meta
+      content="https://github.com/skut21x-ga/portfolio/blob/master/public/fb-og.png?raw=true"
+      property="og:image"
+    />
     <meta
       name="Scott Kutler's Portfolio"
       content="Scott Kutler's React-Based Portfolio"
