added more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>Scott Kutler's Portfolio</title>
+    <meta
+      name="description"
+      content="Scott Kutler's Software Engineering & Product Management Portfolio. This web portfolio includes professional work samples and was created in React."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Scott Kutler" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
@@ -12,10 +19,18 @@
       content="https://github.com/skut21x-ga/portfolio/blob/master/public/fb-og4.png?raw=true"
       property="og:image"
     />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@scottkutler" />
+    <meta name="twitter:title" content="Scott Kutler's Portfolio" />
     <meta
-      name="Scott Kutler's Portfolio"
-      content="Scott Kutler's React-Based Portfolio"
+      name="twitter:description"
+      content="Scott Kutler's Software Engineering & Product Management Portfolio. This web portfolio includes professional work samples and was created in React."
     />
+    <meta
+      name="twitter:image"
+      content="https://github.com/skut21x-ga/portfolio/blob/master/public/fb-og3.png?raw=true"
+    />
+    <meta name="Scott Kutler's Portfolio" content="Scott Kutler's Portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
