trying analytics code

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Scott Kutler's Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-169923260-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-169923260-1");
+    </script>
   </head>
   <body>
     <noscript
